# portfolio-project

./: README.md
chapter3/: crud.py  database.py  fantasy_data.db  models.py
chapter4/: database.py  main.py  models.py  schemas.py  test_crud.py  test_main.py
chapter5/: main.py  readme.md  test_crud.py
chapter6/: Dockerfile  dockerignore  main.py  test_main.py
chapter7/sdk/: pyproject.toml
